Sutter Health/src/objects/Provider_Address__c.object
<CustomObject>
    <fields>
        <fullName>AD_Address_Element_Result_Status__c</fullName>
        <label>AD Address Element Result Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AD_Address_Verification_Status__c</fullName>
        <label>AD Address Verification Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AD_Element_Result_status__c</fullName>
        <label>AD Element Result status</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <label>Address Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Mailability_Score__c</fullName>
        <label>AD Address Mailability Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Process_Description__c</fullName>
        <label>Address Process Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Process_Status__c</fullName>
        <label>Address Process Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Result_Percentage__c</fullName>
        <label>AD Address Result Percentage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Status__c</fullName>
        <label>Address Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Unique_Identifier__c</fullName>
        <description>External ID used to match a Provider Address record to its equivalent record in a source system when updating and/or inserting.</description>
        <externalId>true</externalId>
        <label>Address Unique Identifier</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Address_Validated__c</fullName>
        <formula>IF(NOT(ISBLANK(Address_Process_Status__c)),
    IF(Address_Process_Status__c == &apos;I2&apos;, &apos;ERROR&apos;, 
    IF(Address_Process_Status__c == &apos;V2&apos;, &apos;TENTATIVE&apos;, &apos;Verified&apos;)),
  NULL
  )</formula>
        <label>Address Verification Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact_Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Provider_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decline_Fax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decline Fax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Decline_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decline Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Address__c</fullName>
        <label>Direct Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPIC_Address_Inactive_Status_Date__c</fullName>
        <label>EPIC Address Inactive Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPIC_Address_Status__c</fullName>
        <label>EPIC Address Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>Floor</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formatted_Address__c</fullName>
        <label>Formatted Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Address_Line_2_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Address Line2 Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Address_Line_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Address Line Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Address_Type_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Address Type Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_City_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is City Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_County_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is County Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Direct_Address_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Direct Address Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Floor_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Floor Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Patient_Facing_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Patient Facing Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Phone_Extension_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Phone Extension Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Primary_Phone_Number_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Phone Number Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Secure_Fax_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Secure Fax Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_State_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is State Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Suite_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Suite Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Zip_Code_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Zip Code Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_to_Send_to_EPIC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not to Send to EPIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Only_for_Lab_Results__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only for Lab Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PDI_Campaign__c</fullName>
        <label>PDI Campaign</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Facing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient Facing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider_Address_AD_Status__c</fullName>
        <label>AD Address Process Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Address_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secondary Address Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secure_Fax__c</fullName>
        <label>Secure Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secure_Phone_Ext__c</fullName>
        <label>Secure Phone Ext</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_Phone__c</fullName>
        <label>Primary Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suite__c</fullName>
        <label>Suite</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Summary Id</label>
        <referenceTo>Contact_Validation_Summary__c</referenceTo>
        <relationshipName>Provider_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tech_Bypass_Address_Verification__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Tech_Bypass_Address_Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Find_suggestAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech_Find_suggestAddress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Is_Address_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Is Address Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Is_Address_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech_Is_Address_Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Phone_Number__c</fullName>
        <description>used for search purpose.</description>
        <label>Tech Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Provider Address</label>
    <nameField>
        <displayFormat>Address-{000}</displayFormat>
        <label>Provider Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>